javadoc and lint